@@ -18,6 +18,7 @@ VERSION 2.3.1-Beta 1
   BUGFIXES:
      * Cover fetcher: Fixed a crash involving reappearing cover found dialogs
        and pending cover fetches. (BR 230215)
+     * Display tooltips with applet names in the context toolbar. (BR 230736)
 
 
 VERSION 2.3
